refactor EventSurveyDto and mappers